[gd_scene load_steps=53 format=3 uid="uid://gp0c1lwag3lm"]

[ext_resource type="Script" uid="uid://oy2mbevh1hfo" path="res://scenes/characters/enemy/enemy_sticknode.gd" id="1_liwaj"]
[ext_resource type="AudioStream" uid="uid://bjgiiws1vo0kd" path="res://sfx/characters/enemy/sticknode/sfx_sticknode_refuse.ogg" id="2_4clae"]
[ext_resource type="AudioStream" uid="uid://dihtxt8hckerj" path="res://sfx/characters/enemy/sticknode/sfx_sticknode_defeat.ogg" id="3_impv3"]
[ext_resource type="AudioStream" uid="uid://bjdmdc8hl6e7n" path="res://sfx/characters/enemy/sfx_enemy_stepon.ogg" id="4_b84e7"]
[ext_resource type="AudioStream" uid="uid://bu6l335yng1t" path="res://sfx/characters/enemy/sfx_enemy_stepon_slamdash.ogg" id="5_ujuup"]
[ext_resource type="Shader" uid="uid://b1cpnu7t0bets" path="res://scenes/characters/enemy/flash_damage_fast.gdshader" id="6_117hm"]
[ext_resource type="Texture2D" uid="uid://ce0apn81p3v5o" path="res://sprites/characters/enemy/sticknode/sticknode_defeat0001.png" id="7_bba0t"]
[ext_resource type="Texture2D" uid="uid://bp7dsmfr22lbv" path="res://sprites/characters/enemy/sticknode/sticknode_defeat0002.png" id="8_5vmdx"]
[ext_resource type="Texture2D" uid="uid://djhjqx16daa67" path="res://sprites/characters/enemy/sticknode/sticknode_defeat0003.png" id="9_fv2pf"]
[ext_resource type="Texture2D" uid="uid://dh4jop6rg7yxd" path="res://sprites/characters/enemy/sticknode/sticknode_defeat0004.png" id="10_21k6p"]
[ext_resource type="Texture2D" uid="uid://bh0xojp0mfuqd" path="res://sprites/characters/enemy/sticknode/sticknode_defeat0005.png" id="11_34q57"]
[ext_resource type="Texture2D" uid="uid://cfy3t7wdcjmub" path="res://sprites/characters/enemy/sticknode/sticknode_defeat0006.png" id="12_c6v75"]
[ext_resource type="Texture2D" uid="uid://bj140n6d0e8y6" path="res://sprites/characters/enemy/sticknode/sticknode_idle0001.png" id="13_7g8ak"]
[ext_resource type="Texture2D" uid="uid://clamv150aoeqa" path="res://sprites/characters/enemy/sticknode/sticknode_idle0003.png" id="14_uyp5x"]
[ext_resource type="Texture2D" uid="uid://dekpn7i1g5tfx" path="res://sprites/characters/enemy/sticknode/sticknode_idle0004.png" id="15_kco0w"]
[ext_resource type="Texture2D" uid="uid://bbq50bbf0555q" path="res://sprites/characters/enemy/sticknode/sticknode_idle0005.png" id="16_db0mf"]
[ext_resource type="Texture2D" uid="uid://bep1bfofmx7wd" path="res://sprites/characters/enemy/sticknode/sticknode_idle0006.png" id="17_mn5bj"]
[ext_resource type="Texture2D" uid="uid://pxhxpfvw855v" path="res://sprites/characters/enemy/sticknode/sticknode_idle0007.png" id="18_52oku"]
[ext_resource type="Texture2D" uid="uid://cqmeojkrj32o8" path="res://sprites/characters/enemy/sticknode/sticknode_idle0008.png" id="19_ijlof"]
[ext_resource type="Texture2D" uid="uid://qco17reaqqdt" path="res://sprites/characters/enemy/sticknode/sticknode_idle0009.png" id="20_f3qac"]
[ext_resource type="Texture2D" uid="uid://ctdyt2ju7s0kp" path="res://sprites/characters/enemy/sticknode/sticknode_idle0010.png" id="21_aek4i"]
[ext_resource type="Texture2D" uid="uid://cgnqjh6wdbhpj" path="res://sprites/characters/enemy/sticknode/sticknode_idle0011.png" id="22_kk7ci"]
[ext_resource type="Texture2D" uid="uid://6k1l4j576cbo" path="res://sprites/characters/enemy/sticknode/sticknode_idle0012.png" id="23_0bchn"]
[ext_resource type="Texture2D" uid="uid://bbndi24kd0005" path="res://sprites/characters/enemy/sticknode/sticknode_idle0013.png" id="24_l80yb"]
[ext_resource type="Texture2D" uid="uid://dfa20lnlud5wb" path="res://sprites/characters/enemy/sticknode/sticknode_idle0014.png" id="25_8qett"]
[ext_resource type="Texture2D" uid="uid://bf4kahhba3aok" path="res://sprites/characters/enemy/sticknode/sticknode_idle0015.png" id="26_2jfe3"]
[ext_resource type="Texture2D" uid="uid://exletg1i45ox" path="res://sprites/characters/enemy/sticknode/sticknode_idle0016.png" id="27_jfaum"]
[ext_resource type="Texture2D" uid="uid://carbrsv4pmmx1" path="res://sprites/characters/enemy/sticknode/sticknode_idle0017.png" id="28_kkv5d"]
[ext_resource type="Texture2D" uid="uid://cfmfl3mubbx7e" path="res://sprites/characters/enemy/sticknode/sticknode_idle0018.png" id="29_n3tjq"]
[ext_resource type="Texture2D" uid="uid://jjarb8h217do" path="res://sprites/characters/enemy/sticknode/sticknode_idle0019.png" id="30_6ux3f"]
[ext_resource type="Texture2D" uid="uid://b2f60sqecm375" path="res://sprites/characters/enemy/sticknode/sticknode_idle0020.png" id="31_mceuo"]
[ext_resource type="Texture2D" uid="uid://k8xeuc2t4fl6" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0001.png" id="32_pse35"]
[ext_resource type="Texture2D" uid="uid://u2vvby3m80u8" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0002.png" id="33_hvj3j"]
[ext_resource type="Texture2D" uid="uid://ccacx0q2a2tw4" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0003.png" id="34_cvhqo"]
[ext_resource type="Texture2D" uid="uid://d12cod67fvw7u" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0004.png" id="35_yyfxf"]
[ext_resource type="Texture2D" uid="uid://x1hlfkc47x57" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0005.png" id="36_16b6f"]
[ext_resource type="Texture2D" uid="uid://bs0kcdgk7hqw1" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0006.png" id="37_2vcfy"]
[ext_resource type="Texture2D" uid="uid://dnsssi65b6ko8" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0007.png" id="38_4daod"]
[ext_resource type="Texture2D" uid="uid://livet4yso6dt" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0008.png" id="39_nj5g6"]
[ext_resource type="Texture2D" uid="uid://cx6h8h5m7wfym" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0009.png" id="40_d456p"]
[ext_resource type="Texture2D" uid="uid://bkibo00pkhgcp" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0010.png" id="41_h7i66"]
[ext_resource type="Texture2D" uid="uid://73elqvh1l1u0" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0011.png" id="42_c1a7f"]
[ext_resource type="Texture2D" uid="uid://g7dbpmqh8rxc" path="res://sprites/characters/enemy/sticknode/sticknode_refuse0012.png" id="43_veuwc"]

[sub_resource type="Animation" id="Animation_w4w2u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sticknode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 19)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sticknode:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sticknode:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sticknode:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oinf3"]
resource_name = "defeat"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sticknode:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.16, 0.49), Vector2(0.88, 1.27), Vector2(1.055, 0.865), Vector2(0.93, 1.065), Vector2(1, 1), Vector2(1, 1), Vector2(0.69, 1.57)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sticknode:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.6099, 0.61),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0, 1.0, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"particlesspawn"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sticknode:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.61),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jd1a7"]
resource_name = "refuse"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sticknode:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(0.241484, 1.6245, 0.535887, 1.62451, 1),
"update": 0,
"values": [Vector2(3.575, 19), Vector2(-2.825, 19), Vector2(1.81, 19), Vector2(-1.875, 19), Vector2(0, 19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_byjiw"]
_data = {
&"RESET": SubResource("Animation_w4w2u"),
&"defeat": SubResource("Animation_oinf3"),
&"refuse": SubResource("Animation_jd1a7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oinf3"]
shader = ExtResource("6_117hm")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6nacp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bba0t")
}, {
"duration": 1.0,
"texture": ExtResource("8_5vmdx")
}, {
"duration": 1.0,
"texture": ExtResource("9_fv2pf")
}, {
"duration": 1.0,
"texture": ExtResource("10_21k6p")
}, {
"duration": 1.0,
"texture": ExtResource("11_34q57")
}, {
"duration": 1.0,
"texture": ExtResource("12_c6v75")
}],
"loop": false,
"name": &"defeat",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_7g8ak")
}, {
"duration": 1.0,
"texture": ExtResource("14_uyp5x")
}, {
"duration": 1.0,
"texture": ExtResource("15_kco0w")
}, {
"duration": 1.0,
"texture": ExtResource("16_db0mf")
}, {
"duration": 1.0,
"texture": ExtResource("17_mn5bj")
}, {
"duration": 1.0,
"texture": ExtResource("18_52oku")
}, {
"duration": 1.0,
"texture": ExtResource("19_ijlof")
}, {
"duration": 1.0,
"texture": ExtResource("20_f3qac")
}, {
"duration": 1.0,
"texture": ExtResource("21_aek4i")
}, {
"duration": 1.0,
"texture": ExtResource("22_kk7ci")
}, {
"duration": 1.0,
"texture": ExtResource("23_0bchn")
}, {
"duration": 1.0,
"texture": ExtResource("24_l80yb")
}, {
"duration": 1.0,
"texture": ExtResource("25_8qett")
}, {
"duration": 1.0,
"texture": ExtResource("26_2jfe3")
}, {
"duration": 1.0,
"texture": ExtResource("27_jfaum")
}, {
"duration": 1.0,
"texture": ExtResource("28_kkv5d")
}, {
"duration": 1.0,
"texture": ExtResource("29_n3tjq")
}, {
"duration": 1.0,
"texture": ExtResource("30_6ux3f")
}, {
"duration": 1.0,
"texture": ExtResource("31_mceuo")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_pse35")
}, {
"duration": 1.0,
"texture": ExtResource("33_hvj3j")
}, {
"duration": 1.0,
"texture": ExtResource("34_cvhqo")
}, {
"duration": 1.0,
"texture": ExtResource("35_yyfxf")
}, {
"duration": 1.0,
"texture": ExtResource("36_16b6f")
}, {
"duration": 1.0,
"texture": ExtResource("37_2vcfy")
}, {
"duration": 1.0,
"texture": ExtResource("38_4daod")
}, {
"duration": 1.0,
"texture": ExtResource("39_nj5g6")
}, {
"duration": 1.0,
"texture": ExtResource("40_d456p")
}, {
"duration": 1.0,
"texture": ExtResource("41_h7i66")
}, {
"duration": 1.0,
"texture": ExtResource("42_c1a7f")
}, {
"duration": 1.0,
"texture": ExtResource("43_veuwc")
}],
"loop": false,
"name": &"refuse",
"speed": 18.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_to1ra"]
size = Vector2(66, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6pkr"]
size = Vector2(66, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnd1t"]
size = Vector2(66, 11)

[node name="Enemy_Sticknode" type="RigidBody2D" groups=["Enemies", "sticknode_group"]]
rotation = -3.1415927
collision_mask = 5
script = ExtResource("1_liwaj")

[node name="SFX" type="Node2D" parent="."]

[node name="Refuse" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("2_4clae")
volume_db = 8.0
bus = &"sfx"

[node name="Defeat" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_impv3")
volume_db = 8.0
bus = &"sfx"

[node name="Animation" type="Node2D" parent="."]

[node name="Sticknode_Animations" type="AnimationPlayer" parent="Animation"]
libraries = {
&"": SubResource("AnimationLibrary_byjiw")
}

[node name="EnemyStepOnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b84e7")
bus = &"sfx"

[node name="EnemyStepOnHard" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ujuup")
bus = &"sfx"

[node name="EnemyDeathTimer" type="Timer" parent="."]

[node name="Sticknode" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_oinf3")
position = Vector2(0, 19)
sprite_frames = SubResource("SpriteFrames_6nacp")
animation = &"defeat"
autoplay = "idle"
offset = Vector2(0, -19)

[node name="MainHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_to1ra")

[node name="TriggerHitbox" type="Area2D" parent="."]
collision_mask = 5

[node name="TriggerHitbox" type="CollisionShape2D" parent="TriggerHitbox"]
position = Vector2(0, -20.5)
shape = SubResource("RectangleShape2D_a6pkr")

[node name="StickTrigger" type="Area2D" parent="."]
collision_mask = 5

[node name="StickTrigger" type="CollisionShape2D" parent="StickTrigger"]
position = Vector2(0, 21.5)
shape = SubResource("RectangleShape2D_hnd1t")

[node name="ParticlesSpawn" type="Marker2D" parent="."]

[connection signal="timeout" from="EnemyDeathTimer" to="." method="_on_enemy_death_timer_timeout"]
[connection signal="frame_changed" from="Sticknode" to="." method="_on_sticknode_frame_changed"]
[connection signal="body_entered" from="TriggerHitbox" to="." method="_on_trigger_hitbox_body_entered"]
[connection signal="area_entered" from="StickTrigger" to="." method="_on_stick_trigger_area_entered"]
